# rapid-qoi

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  validate.sh
bench/: Cargo.toml
bench/src/: main.rs
benches/intel/: rapid.md  reference.md
benches/intel-msvc/: rapid.md  reference.md
benches/m1/: rapid.md  reference.md
examples/: qoibench.rs  qoiconv.rs
license/: APACHE  MIT
qoiconv/: Cargo.toml
qoiconv/src/: main.rs
src/: decode.rs  encode.rs  lib.rs
