[package]
name = "rapid-qoi"
version = "0.4.2"
edition = "2018"
authors = []
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rapid-qoi"
homepage = "https://github.com/zakarumych/rapid-qoi"
repository = "https://github.com/zakarumych/rapid-qoi"
readme = "README.md"
description = "Optimized QOI format decoder and decoder"
keywords = ["qoi", "image", "encode", "decode", "no-std"]
categories = ["algorithms", "compression", "multimedia::encoding", "no-std"]

[features]
alloc = []
std = ["alloc"]
default = ["std"]

[dev-dependencies]
image = "0.23"
qoi = "0.3"
qoi_rs = "0.1"
